# DocumentDiffCheck

./: .env.example  .gitignore  AGENTS.md  CODE_REVIEW.md  LICENSE  README.md  pyproject.toml  run.py
.claude/: launch.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  LLM_ANALYTICS_RU.md
frontend/: app.js  documents.html  documents.js  history.html  history.js  index.html  nav.js  report.html  report.js  review-report.html  review-report.js  review.html  review.js  styles.css
samples/: dogovor_postavki_v1.docx  dogovor_postavki_v2.docx
src/: __init__.py  config.py
src/api/: app.py
src/application/: use_cases.py
src/domain/: __init__.py  chunking.py  comparison.py  entities.py  exceptions.py  ports.py
src/infrastructure/: atomic_json.py  docx_parser.py  insights.py  reports.py  reviews.py  storage.py
src/integrations/: gemini_provider.py  openrouter_provider.py
src/schemas/: __init__.py  api.py  insights.py
tests/: test_api.py  test_chunking.py  test_comparison_service.py  test_config.py  test_documents_frontend.py  test_docx_parser.py  test_dropzone_frontend.py  test_gemini_provider.py  test_history_frontend.py  test_index_frontend.py  test_openrouter_provider.py  test_resilient_insight_provider.py  test_risk_level_frontend.py  test_storage.py  test_summary_banner_frontend.py  test_upload_use_case.py
