[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-diff-check"
version = "0.1.0"
description = "DOCX comparison service with legal summaries and financial risk assessment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.8.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["src"]

[[tool.mypy.overrides]]
module = ["gemini_gateway"]
ignore_missing_imports = true
